feat: add new images, videos and partners

--- a/gallery.html
+++ b/gallery.html
@@ -460,9 +460,156 @@
 							</a>
 						</div>
 
+						<hr class="my-5">
+
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-55.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-56.jpeg" alt="Gallery Image 56">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-57.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-57.jpeg" alt="Gallery Image 57">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-58.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-58.jpeg" alt="Gallery Image 58">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-59.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-59.jpeg" alt="Gallery Image 59">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-60.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-60.jpeg" alt="Gallery Image 60">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-61.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-61.jpeg" alt="Gallery Image 61">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-62.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-62.jpeg" alt="Gallery Image 62">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-63.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-63.jpeg" alt="Gallery Image 63">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-64.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-64.jpeg" alt="Gallery Image 64">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-65.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-65.jpeg" alt="Gallery Image 65">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-66.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-66.jpeg" alt="Gallery Image 66">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-67.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-67.jpeg" alt="Gallery Image 67">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-68.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-68.jpeg" alt="Gallery Image 68">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-69.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-69.jpeg" alt="Gallery Image 69">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-70.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-70.jpeg" alt="Gallery Image 70">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-71.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-71.jpeg" alt="Gallery Image 71">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-72.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-72.jpeg" alt="Gallery Image 72">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-73.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-73.jpeg" alt="Gallery Image 73">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-74.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-74.jpeg" alt="Gallery Image 74">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-75.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-75.jpeg" alt="Gallery Image 75">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-76.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-76.jpeg" alt="Gallery Image 76">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-77.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-77.jpeg" alt="Gallery Image 77">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-78.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-78.jpeg" alt="Gallery Image 78">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-79.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-79.jpeg" alt="Gallery Image 79">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-80.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-80.jpeg" alt="Gallery Image 80">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-81.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-81.jpeg" alt="Gallery Image 81">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-82.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-82.jpeg" alt="Gallery Image 82">
+							</a>
+						</div>
+
+
+
+
+
+						
+
 					</div> <!-- End row -->
 
 				</div> <!-- End container -->
+
+
+
 			</section>
 
 			<!-- MODAL -->
