--- a/global-presence.html
+++ b/global-presence.html
@@ -285,8 +285,8 @@
               </div>
             </div>
             <div class="col-md-6">
-              <img class="img-fluid rounded" src="images/gallery/young-leaders-43.png" alt="Cultural Routes">
-              <img class="img-fluid rounded mt-3" src="images/gallery/young-leaders-44.png" alt="Cultural Routes">
+              <img class="img-fluid rounded" src="images/gallery/young-leaders-56.jpeg" alt="Cultural Routes">
+              <img class="img-fluid rounded mt-3" src="images/gallery/young-leaders-43.png" alt="Cultural Routes">
             </div>
           </div>
         </div>
