--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 
 
-			<!-- HERO-2 HOME
+			<!-- VIDEO
 			============================================= -->	
 			<section class="bg--fixed hero-section">
 				<div class="container text-center">
@@ -247,7 +247,7 @@
 
 
 				</div>    <!-- End container --> 
-			</section>	<!-- END HERO-2 -->
+			</section>	<!-- END VIDEO -->
 
 
 			<!-- DIVIDER LINE -->
@@ -412,6 +412,21 @@
 								<!-- BRAND LOGO IMAGE -->
 								<div class="brand-logo">
 									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-11.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-12.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-13.png" alt="brand-logo" width="150" height="100"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-14.jpg" alt="brand-logo" width="150" height="200"></a>
 								</div>
 
 							</div>	
@@ -997,52 +1012,67 @@
 
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-03.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-03.jpg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-03.jpg" alt="Gallery Image 3">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-04.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-04.jpg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-04.jpg" alt="Gallery Image 4">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-05.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-05.jpg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-05.jpg" alt="Gallery Image 5">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-06.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-06.jpg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-06.jpg" alt="Gallery Image 6">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-07.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-07.jpg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-07.jpg" alt="Gallery Image 7">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-08.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-08.jpg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-08.jpg" alt="Gallery Image 8">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-09.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-09.jpg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-09.jpg" alt="Gallery Image 9">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-10.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-10.jpg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-10.jpg" alt="Gallery Image 10">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-52.jpeg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-52.jpeg" alt="Gallery Image 12">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-52.jpeg" alt="Gallery Image 11">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
 							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-12.jpg">
 								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-12.jpg" alt="Gallery Image 12">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-57.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-57.jpeg" alt="Gallery Image 13">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-64.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-64.jpeg" alt="Gallery Image 14">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-82.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-82.jpeg" alt="Gallery Image 15">
 							</a>
 						</div>
 
@@ -1068,6 +1098,35 @@
 					</div>
 				</div>
 			</div>
+
+
+			<!-- VIDEO CHINA
+			============================================= -->	
+			<section class="bg--fixed hero-section">
+				<div class="container text-center">
+
+					<!-- HERO IMAGE -->
+					<div class="row">
+						<div class="col">
+							<div class="hero-2-img video-preview wow animate__animated animate__fadeInUp">
+
+								<!-- Play Icon --> 
+								<a class="video-popup1" href="./videos/china.mp4">				
+									<div class="video-btn video-btn-xl bg--theme">	
+										<div class="video-block-wrapper"><span class="flaticon-play-button"></span></div>
+									</div>
+								</a>
+
+								<!-- Preview Image --> 
+								<img class="img-fluid" src="./videos/bg.jpg" alt="video-preview" style="border-radius: 8px;">	
+
+							</div>
+						</div>	
+					</div>	<!-- END HERO IMAGE --> 	
+
+
+				</div>    <!-- End container --> 
+			</section>	<!-- END VIDEO CHINA -->
 
 
 			<!-- BOX CONTENT - BEATRICE DE SALLES
